--- a/output/cb_web_new.css
+++ b/output/cb_web_new.css
@@ -8,10 +8,23 @@ body{
 .loader{
 
 }
-.tl_logo a {
+.tl_logo a,
+.active .header__left__logo {
     background-image: url(/Img/partners/111/logoBig.png);
     width: 150px;
     height: 32px;
+}
+.header__left__logo{
+    background-image: url(/Img/partners/111/logoSm.png);
+    width: 50px;
+    height: 32px;
+}
+@media screen and (max-width: 1500px){
+    .tl_logo a {
+        background-image: url(/Img/partners/111/logoSm.png);
+        width: 50px;
+        height: 32px;
+    }
 }
 .tl_logo_space_imitator{
     width: 150px;
@@ -40,13 +53,15 @@ a.tl_btn:hover,
 }
 
 .tl_btn-accent,
-a.tl_btn-accent {
-    background-color: #00b45d;
+a.tl_btn-accent,
+.add_game_popup .moregame {
+    background-color: #00E777;
     color: #000;
 }
 .tl_btn-accent:hover,
-a.tl_btn-accent:hover {
-    background-color: #008143;
+a.tl_btn-accent:hover,
+.add_game_popup .moregame:hover {
+    background-color: #00b45d;
     color: #000;
 }
 /*dropdowns*/
@@ -77,20 +92,32 @@ a.tl_dropdown_style:hover {
     padding-left: 16px;
     padding-right: 16px;
 }
+a.tl_simple_link-accent {
+    background-color: #434343;
+    height: 35px;
+    line-height:35px;
+    padding: 0 8px;
+    color: #00E777;
+    border-radius: 2px;
+}
+a.tl_simple_link-accent:hover{
+    background-color: #404040;
+    color: #00E777;
+}
 /*links*/
 .tl_simple_link {
     transition: color 0.314s;
     color: #fff;
 }
 .tl_simple_link:hover {
-    color: #00b45d;
+    color: #00E777;
 }
 /*badge*/
 .tl_badge{
     position:absolute;
     top:0;
     right:0;
-    background-color:#00b45d;
+    background-color:#00E777;
     color:#000;
     width:24px;
     height:24px;
@@ -112,7 +139,10 @@ a.tl_dropdown_style:hover {
 .tl_promoted {
     position: relative;
 }
-.tl_promoted:after {
+.tl_promoted:after,
+.New:after,
+.promoted:after,
+.tl_game_tab_item.New:after {
     position: absolute;
     top: 0;
     right: 0;
@@ -127,9 +157,13 @@ a.tl_dropdown_style:hover {
     font-weight: 500;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
     text-transform: uppercase;
+    background: none;
 }
-.tl_promoted:after {
-    background-color:#00b45d;
+.tl_promoted:after,
+.New:after,
+.promoted:after,
+.tl_game_tab_item.New:after {
+    background-color:#00E777;
     color:#000;
 }
 
@@ -150,7 +184,7 @@ a.tl_dropdown_style:hover {
 }
 .tl_main_nav_item:hover,
 .tl_main_nav_item-active {
-    color: #00b45d;
+    color: #00E777;
 }
 
 /*main nav*/
@@ -196,7 +230,11 @@ a.tl_dropdown_style:hover {
 }
 .top_winners__value,
 .top_winners__date  {
-    color: #00b45d;
+    color: #00E777;
+}
+.me_badge{
+    background-color: #00E777;
+    color: #000 !important;
 }
 .top_winners__game{
     border-color:#313131;
@@ -211,7 +249,7 @@ a.tl_dropdown_style:hover {
 }
 .cas_nav_prev:hover,
 .cas_nav_next:hover {
-    color: #00b45d;
+    color: #00E777;
 }
 
 /*footer*/
@@ -225,14 +263,14 @@ a.tl_dropdown_style:hover {
 }
 .footer_links_heading{
     margin-bottom: 4px;
-    color:#00b45d;
+    color:#00E777;
 }
 
 .tl_footer_links_heading {
     font-size: 1.2em;
     display: block;
     margin-bottom:16px;
-    color:#00b45d;
+    color:#00E777;
 }
 .tl_footer_link {
     display: block;
@@ -318,7 +356,7 @@ a.tl_dropdown_style:hover {
     margin-top: 4px;
 }
 .tl_messige-success{
-    color:#00b45d;
+    color:#00E777;
 }
 .tl_messige-fail {
     color: #f00;
@@ -329,11 +367,11 @@ a.tl_dropdown_style:hover {
 
 /*casino games*/
 .game__link_real{
-    background-color:#00b45d;
+    background-color:#00E777;
     color:#000;
 }
 .game__link_real:hover{
-    background-color:#008143;
+    background-color:#00b45d;
     color:#000;
 }
 
@@ -358,8 +396,7 @@ a.tl_dropdown_style:hover {
 }
 .filter_search{
     background-color: #434343;
-    color: #313131;
-
+    color: #b3b3b3;
 }
 .filter_search_content {
     color: #fff;
@@ -369,8 +406,8 @@ a.tl_dropdown_style:hover {
     color: #b3b3b3;
 }
 .games_filter_element:hover,
-.games_filter_element.active, {
-    background-color: #00b45d;
+.games_filter_element.active {
+    background-color: #00E777;
     color: #000;
 }
 .games_filter_reset {
@@ -382,11 +419,11 @@ a.tl_dropdown_style:hover {
     color: #b3b3b3;
 }
 .games_filter_show {
-    background-color: #00b45d;
+    background-color: #00E777;
     color: #000;
 }
 .games_filter_show:hover {
-    background-color: #008143;
+    background-color: #00b45d;
     color: #000;
 }
 
@@ -400,7 +437,7 @@ a.tl_dropdown_style:hover {
 }
 .game__buttons span:hover .likescount,
 .game__buttons span:hover {
-    color: #00b45d;
+    color: #00E777;
 }
 .add__games_popup,
 .add__games_popup .tl_games_container .tl_game_tabs_container {
@@ -413,26 +450,14 @@ a.tl_dropdown_style:hover {
     color: #fff;
 }
 .casino_nav__providers .tl_tab_item.active {
-    background-color: #00b45d;
+    background-color: #00E777;
     color: #000;
 }
 .add__games_popup .tl_game_tabs_menu .tl_game_tab_item {
     color: #fff;
 }
 .add__games_popup .tl_game_tabs_menu .tl_game_tab_item.active {
-    color: #00b45d;
-}
-.tl_game_tab_item.New::after {
-    content: 'new';
-    width: 23px;
-    height: 12px;
-    line-height: 12px;
-    background: none;
-    background-color: #00b45d;
-    color: #000;
-    font-size: 10px;
-    text-align: center;
-    border-radius:4px;
+    color: #00E777;
 }
 .add__games_popup .search__block {
     background-color: #1a1a1a;
@@ -503,14 +528,14 @@ a.tl_dropdown_style:hover {
     color: #000;
 }
 .tl_prom_filters:after{
-    background-color: #00b45d;
+    background-color: #00E777;
 }
 .tl_promo_news_name,
 .tl_promo_news_hover{
-    border-color: #00b45d;
+    border-color: #00E777;
 }
 .tl_promo_news_button{
-    background-color: #00b45d;
+    background-color: #00E777;
     color: #000;
 }
 /*inputs*/
@@ -524,7 +549,7 @@ a.tl_dropdown_style:hover {
 /*registration steps*/
 .reg_progress_dots span.active:after,
 .reg_progress_dots span.done{
-    background-color: #00b45d;
+    background-color: #00E777;
 }
 .reg_progress_dots span{
     border-color: #b3b3b3;
@@ -553,12 +578,12 @@ a.tl_dropdown_style:hover {
 .tl_casino_navigation_tab.active,
 .tl_casino_navigation_tab:hover {
     background-color: rgba(26,26,26,0.877);
-    color: #00b45d;
+    color: #00E777;
 }
 
 .tl_casino_subnavigation_item.active,
 .tl_casino_subnavigation_item:hover {
-    color: #00b45d;
+    color: #00E777;
 }
 
 .casino_nav__see_more__dropdown,
@@ -592,11 +617,11 @@ a.tl_dropdown_style:hover {
     color:#b3b3b3;
 }
 .tl_payment_block .tl_deposit_button{
-    background-color:#00b45d;
+    background-color:#00E777;
     color:#000;
 }
 .tl_payment_block .tl_deposit_button:hover{
-    background-color:#008143;
+    background-color:#00b45d;
     color:#000;
 }
 .tl_input_popup{
@@ -635,16 +660,32 @@ a.tl_dropdown_style:hover {
     color:#b3b3b3;
 }
 .tl_mail_msgId{
-    color:#00b45d;
+    color:#00E777;
 }
 .tl_msg_button {
-    background-color: #00b45d;
+    background-color: #00E777;
     color: #000;
 }
 .tl_msg_button:hover {
-    background-color: #008143;
+    background-color: #00b45d;
     color: #000;
 }
+.close_games_content,
+.add__game,
+.add__game_button,
+.left__menu{
+    background-color:rgba(26,26,26,0.877);
+    color:#fff;
+}
+.last__winners .item__img{
+    background-color:#1a1a1a;
+    color:#fff;
+}
+.star__icon.favoriteGames_delete,
+.tl_typography_accent{
+    color: #00E777;
+}
+
 
    
     /*different casino accent and logo*/
@@ -653,23 +694,40 @@ a.tl_dropdown_style:hover {
     }
     
     .tl_casino_page .tl_btn-accent,
+    .tl_casino_page .add_game_popup .moregame,
     .tl_casino_page .a.tl_btn-accent,
     .tl_casino_page .tl_promoted:after,
+    .tl_casino_page .New:after,
+    .tl_casino_page .tl_game_tab_item.New:after,
+    .tl_casino_page .promoted:after,
     .tl_casino_page .game__link_real,
     .tl_casino_page .tl_badge,
     .tl_casino_page .tl_payment_block .tl_deposit_button,
-    .tl_casino_page .tl_search_button {
+    .tl_casino_page .tl_search_button,
+    .tl_casino_page .games_filter_element:hover,
+    .tl_casino_page .games_filter_element.active,
+    .tl_casino_page .games_filter_show,
+    .tl_casino_page .me_badge{
         background-color: #ffb700;
         color: #000;
     }
     
     .tl_casino_page .tl_btn-accent:hover,
     .tl_casino_page a.tl_btn-accent:hover,
+    .tl_casino_page .add_game_popup .moregame:hover,
     .tl_casino_page .game__link_real:hover,
-    .tl_payment_block .tl_deposit_button:hover,
-    .tl_payment_block .tl_search_button:hover {
+    .tl_casino_page .tl_payment_block .tl_deposit_button:hover,
+    .tl_payment_block .tl_search_button:hover,
+    .tl_payment_block .games_filter_show:hover {
         background-color: #cc9200;
         color: #000;
+    }
+
+    .tl_casino_page a.tl_simple_link-accent,
+    .tl_casino_page a.tl_simple_link-accent:hover,
+    .tl_casino_page .top_winners__value,
+    .tl_casino_page .top_winners__date {
+        color: #ffb700;
     }
     
     .tl_casino_page .tl_main_nav_item:hover,
@@ -682,7 +740,8 @@ a.tl_dropdown_style:hover {
     .tl_casino_page .tl_casino_navigation_tab:hover,
     .tl_casino_page .tl_casino_subnavigation_item.active,
     .tl_casino_page .tl_casino_subnavigation_item:hover,
-    .tl_casino_page .top_winners__value {
+    .tl_casino_page .top_winners__value,
+    .tl_casino_page .star__icon.favoriteGames_delete {
         color: #ffb700;
     }
 
