--- a/output/oynabet_web_new.css
+++ b/output/oynabet_web_new.css
@@ -1,17 +1,30 @@
 
 /*main styles*/
 body{
-    background-color:#e8e8e8;
-    color:#000;
+    background-color:#003642;
+    color:#fff;
     font-size:13px;
 }
 .loader{
 
 }
-.tl_logo a {
+.tl_logo a,
+.active .header__left__logo {
     background-image: url(/Img/partners/111/logoBig.png);
     width: 150px;
     height: 32px;
+}
+.header__left__logo{
+    background-image: url(/Img/partners/111/logoSm.png);
+    width: 50px;
+    height: 32px;
+}
+@media screen and (max-width: 1500px){
+    .tl_logo a {
+        background-image: url(/Img/partners/111/logoSm.png);
+        width: 50px;
+        height: 32px;
+    }
 }
 .tl_logo_space_imitator{
     width: 150px;
@@ -20,54 +33,56 @@ body{
 .tl_btn,
 a.tl_btn,
 .tl_acc_lang {
-    background-color: #d6d6d6;
-    color: #4d4d4d;
+    background-color: #00191e;
+    color: #b3b3b3;
     border-radius: 2px;
     
 }
 .tl_acc_lang > a {
-    color: #4d4d4d;
+    color: #b3b3b3;
 }
 .tl_acc_lang:hover > a {
-    color: #4d4d4d;
+    color: #b3b3b3;
 }
 
 .tl_btn:hover,
 a.tl_btn:hover,
 .tl_acc_lang:hover {
-    background-color: #ebebeb;
-    color: #4d4d4d;
+    background-color: #003a47;
+    color: #b3b3b3;
 }
 
 .tl_btn-accent,
-a.tl_btn-accent {
-    background-color: #ffb700;
-    color: #000;
+a.tl_btn-accent,
+.add_game_popup .moregame {
+    background-color: #F27404;
+    color: #fff;
 }
 .tl_btn-accent:hover,
-a.tl_btn-accent:hover {
-    background-color: #cc9200;
-    color: #000;
+a.tl_btn-accent:hover,
+.add_game_popup .moregame:hover {
+    background-color: #c05c03;
+    color: #fff;
 }
 /*dropdowns*/
 .tl_dropdown_style,
 a.tl_dropdown_style {
-    background-color: #fff;
-    color: #000;
+    background-color: #005C70;
+    color: #fff;
     border-bottom: 1px solid;
-    border-color: #e8e8e8;
+    border-color: #003642;
 }
 .tl_dropdown_style:hover,
 a.tl_dropdown_style:hover {
-    background-color: #ebebeb;
-    color: #000;
+    background-color: #003a47;
+    color: #fff;
 }
 /*header*/
 .tl_acc_lang {
     margin: 0 4px;
 }
 .tl_header_top_row {
-    background-color: #f00;
+    background-color: #005C70;
     color:#fff;
 }
 .tl_time {
@@ -77,21 +92,33 @@ a.tl_dropdown_style:hover {
     padding-left: 16px;
     padding-right: 16px;
 }
+a.tl_simple_link-accent {
+    background-color: #00191e;
+    height: 35px;
+    line-height:35px;
+    padding: 0 8px;
+    color: #F27404;
+    border-radius: 2px;
+}
+a.tl_simple_link-accent:hover{
+    background-color: #001d23;
+    color: #F27404;
+}
 /*links*/
 .tl_simple_link {
     transition: color 0.314s;
-    color: #000;
+    color: #fff;
 }
 .tl_simple_link:hover {
-    color: #ffb700;
+    color: #F27404;
 }
 /*badge*/
 .tl_badge{
     position:absolute;
     top:0;
     right:0;
-    background-color:#ffb700;
-    color:#000;
+    background-color:#F27404;
+    color:#fff;
     width:24px;
     height:24px;
     line-height:24px;
@@ -105,14 +132,17 @@ a.tl_dropdown_style:hover {
 }
 /*header bottom row*/
 .tl_header_bot_row {
-    background-color: #e8e8e8;
-    color: #000;
+    background-color: #003642;
+    color: #fff;
 }
 /*promoted routine*/
 .tl_promoted {
     position: relative;
 }
-.tl_promoted:after {
+.tl_promoted:after,
+.New:after,
+.promoted:after,
+.tl_game_tab_item.New:after {
     position: absolute;
     top: 0;
     right: 0;
@@ -127,10 +157,14 @@ a.tl_dropdown_style:hover {
     font-weight: 500;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
     text-transform: uppercase;
+    background: none;
 }
-.tl_promoted:after {
-    background-color:#ffb700;
-    color:#000;
+.tl_promoted:after,
+.New:after,
+.promoted:after,
+.tl_game_tab_item.New:after {
+    background-color:#F27404;
+    color:#fff;
 }
 
 .tl_header_navigation{
@@ -146,11 +180,11 @@ a.tl_dropdown_style:hover {
     font-size: 1.2em;
     transition: all 0.314s;
     white-space:nowrap;
-    color: #000;
+    color: #fff;
 }
 .tl_main_nav_item:hover,
 .tl_main_nav_item-active {
-    color: #ffb700;
+    color: #F27404;
 }
 
 /*main nav*/
@@ -161,8 +195,8 @@ a.tl_dropdown_style:hover {
 }
 .tl_landing_nav_big {
     height: 120px;
-    background-color: rgba(255,255,255,0.877);
-    color: #000;
+    background-color: rgba(0,92,112,0.877);
+    color: #fff;
     position: relative;
     border-radius:8px;
     flex-grow: 1;
@@ -191,85 +225,95 @@ a.tl_dropdown_style:hover {
 }
 /*top winners*/
 .top_winners__game_block{
-    background-color: rgba(255,255,255,0.877);
-    color: #000;
+    background-color: rgba(0,92,112,0.877);
+    color: #fff;
+}
+.top_winners__value,
+.top_winners__date  {
+    color: #F27404;
+}
+.me_badge{
+    background-color: #F27404;
+    color: #fff !important;
+}
+.top_winners__game{
+    border-color:#003642;
 }
 /*banner navigation*/
 .top_winners__slider_number,
 .cas_nav_prev,
 .cas_nav_next {
-    background-color: rgba(255,255,255,0.877);
-    color: #000;
+    background-color: rgba(0,92,112,0.877);
+    color: #fff;
     margin:4px;
 }
 .cas_nav_prev:hover,
 .cas_nav_next:hover {
-    color: #ffb700;
+    color: #F27404;
 }
 
 /*footer*/
 .tl_footer{
-    background-color:#fff;
-    color:#000;
+    background-color:#005C70;
+    color:#fff;
     overflow:hidden;
     padding-top: 64px;
+    z-index: 10;
+    position: relative;
 }
 .footer_links_heading{
     margin-bottom: 4px;
-    color:#ffb700;
+    color:#F27404;
 }
 
 .tl_footer_links_heading {
     font-size: 1.2em;
     display: block;
-    margin-bottom:8px;
-    color:#ffb700;
+    margin-bottom:16px;
+    color:#F27404;
 }
 .tl_footer_link {
     display: block;
     margin-bottom: 4px;
     transition: all 0.314s;
-    color:#4d4d4d;
+    color:#b3b3b3;
 }
 .tl_footer_text {
     line-height:1.3;
-    color:#4d4d4d;
+    color:#b3b3b3;
 }
 
 .tl_footer_link:hover {
-    color: #000;
+    color: #fff;
 }
 
 /*popups*/
 .tl_popup_header {
-    background-color: #e8e8e8;
-    color: #000;
+    background-color: #003642;
+    color: #fff;
     border-radius: 2px 2px 0 0;
 }
 .tl_head_text,
 .tl_head_close {
-    color: #000;
+    color: #fff;
 }
 
 .tl_popup_content {
-    background-color: #fff;
-    color: #4d4d4d;
+    background-color: #005C70;
+    color: #b3b3b3;
     border-radius: 0 0 2px 2px;
 }
 /*widgets*/
-.tl_widget_heading {
-    background-color: rgba(255,255,255,0.877);
-    color: #ffb700;
+.tl_widget_heading,
+.name_vidget {
+    background-color: rgba(0,92,112,0.877);
+    color: #fff;
     border-radius:8px;
     padding:0 16px;
     height:35px;
     line-height:35px;
     
 
-}
-.name_vidget {
-    background-color: rgba(0,0,0,0.5);
-    color: #ffb700;
 }
 /*banners*/
 .tl_landing_banner {
@@ -301,8 +345,8 @@ a.tl_dropdown_style:hover {
 
 /*my account*/
 .tl_my_acc_cont_content{
-    background-color:#fff;
-    color:#4d4d4d;
+    background-color:#005C70;
+    color:#b3b3b3;
 }
 
 .tl_messige {
@@ -312,7 +356,7 @@ a.tl_dropdown_style:hover {
     margin-top: 4px;
 }
 .tl_messige-success{
-    color:#ffb700;
+    color:#F27404;
 }
 .tl_messige-fail {
     color: #f00;
@@ -323,125 +367,115 @@ a.tl_dropdown_style:hover {
 
 /*casino games*/
 .game__link_real{
-    background-color:#ffb700;
-    color:#000;
+    background-color:#F27404;
+    color:#fff;
 }
 .game__link_real:hover{
-    background-color:#cc9200;
-    color:#000;
+    background-color:#c05c03;
+    color:#fff;
 }
 
 .game__link_demo {
-    background-color: #d6d6d6;
-    color: #000;
+    background-color: #00191e;
+    color: #fff;
 }
 .game__link_demo:hover {
-    background-color: #d9d9d9;
-    color: #000;
+    background-color: #001d23;
+    color: #fff;
 }
 
 /*??????*/
 .tl_game_tabs_menu .tl_game_tab_item {
-    color: #000;
+    color: #fff;
 }
 
 /*games filter*/
 .games_filter_content {
-    background-color: #fff;
-    color: #4d4d4d;
+    background-color: #005C70;
+    color: #b3b3b3;
 }
 .filter_search{
-    background-color: #d6d6d6;
+    background-color: #00191e;
+    color: #b3b3b3;
 }
 .filter_search_content {
-    color: #000;
+    color: #fff;
 }
 .games_filter_element {
-    background-color: #d6d6d6;
-    color: #4d4d4d;
+    background-color: #00191e;
+    color: #b3b3b3;
 }
-.games_filter_element:hover {
-    background-color: #ffb700;
-    color: #000;
+.games_filter_element:hover,
+.games_filter_element.active {
+    background-color: #F27404;
+    color: #fff;
 }
 .games_filter_reset {
-    background-color: #d6d6d6;
-    color: #4d4d4d;
+    background-color: #00191e;
+    color: #b3b3b3;
 }
 .games_filter_reset:hover {
-    background-color: #d9d9d9;
-    color: #4d4d4d;
+    background-color: #001d23;
+    color: #b3b3b3;
 }
 .games_filter_show {
-    background-color: #ffb700;
-    color: #000;
+    background-color: #F27404;
+    color: #fff;
 }
 .games_filter_show:hover {
-    background-color: #cc9200;
-    color: #000;
+    background-color: #c05c03;
+    color: #fff;
 }
 
 /*game view*/
 .game__view__header {
-    background-color: rgba(255,255,255,0.877);
-    color: #000;
+    background-color: rgba(0,92,112,0.877);
+    color: #fff;
 }
 .header__left__button{
-    color:#000;
+    color:#fff;
 }
 .game__buttons span:hover .likescount,
 .game__buttons span:hover {
-    color: #ffb700;
+    color: #F27404;
 }
 .add__games_popup,
 .add__games_popup .tl_games_container .tl_game_tabs_container {
-    background-color: #fff !important;
-    color: #000 !important;
+    background-color: #005C70 !important;
+    color: #fff !important;
 }
 .casino_nav__providers .tl_tab_item {
     border-radius: 0;
-    background-color: #fff;
-    color: #000;
+    background-color: #005C70;
+    color: #fff;
 }
 .casino_nav__providers .tl_tab_item.active {
-    background-color: #ffb700;
-    color: #000;
+    background-color: #F27404;
+    color: #fff;
 }
 .add__games_popup .tl_game_tabs_menu .tl_game_tab_item {
-    color: #000;
+    color: #fff;
 }
 .add__games_popup .tl_game_tabs_menu .tl_game_tab_item.active {
-    color: #ffb700;
-}
-.tl_game_tab_item.New::after {
-    content: 'new';
-    width: 23px;
-    height: 12px;
-    line-height: 12px;
-    background: none;
-    background-color: #ffb700;
-    color: #000;
-    font-size: 10px;
-    text-align: center;
-    border-radius:4px;
+    color: #F27404;
 }
 .add__games_popup .search__block {
-    background-color: #fff;
-    color: #000;
+    background-color: #005C70;
+    color: #fff;
 }
 .add_game_popup .search__input {
-    background-color: #fff;
-    color: #000;
+    background-color: #005C70;
+    color: #fff;
     box-shadow: none !important;
 }
 .add_game_popup .ui-dialog-titlebar {
-    background-color: #e8e8e8 !important;
-    color: #000 !important;
+    background-color: #003642 !important;
+    color: #fff !important;
     border: 0 !important;
 }
 .ui-widget-content {
-    background-color: #fff !important;
-    color: #000 !important;
+    background-color: #005C70 !important;
+    color: #fff !important;
     border-radius: 2px;
 }
 .ui-dialog .ui-dialog-titlebar-close {
@@ -479,87 +513,181 @@ a.tl_dropdown_style:hover {
     display:block;
     width: 100%;
     height: 100px;
-    background: linear-gradient(180deg, rgba(0,0,0,0) 0%, #e8e8e8 100%);
+    background: linear-gradient(180deg, rgba(0,0,0,0) 0%, #003642 100%);
 }
 /*promotions*/
 .tl_news, .tl_news_single, .tl_promotions{
-    background-color: #e8e8e8;
-    color: #000;
+    background-color: #003642;
+    color: #fff;
 }
 .tl_prom_filters{
-    background-color: #d6d6d6;
-    color: #000;
+    background-color: #00191e;
+    color: #fff;
 }
 .tl_prom_filters:hover{
-    color: #000;
+    color: #fff;
 }
 .tl_prom_filters:after{
-    background-color: #ffb700;
+    background-color: #F27404;
 }
 .tl_promo_news_name,
 .tl_promo_news_hover{
-    border-color: #ffb700;
+    border-color: #F27404;
 }
 .tl_promo_news_button{
-    background-color: #ffb700;
-    color: #000;
+    background-color: #F27404;
+    color: #fff;
 }
 /*inputs*/
 .tl_input_popup_reg,
 .tl_sel_custom_popup_reg_selected,
 .tl_input_popup_reg_s{
-    background-color: #e8e8e8;
-    color: #4d4d4d;
+    background-color: #003642;
+    color: #b3b3b3;
 }
 
 /*registration steps*/
 .reg_progress_dots span.active:after,
 .reg_progress_dots span.done{
-    background-color: #ffb700;
+    background-color: #F27404;
 }
 .reg_progress_dots span{
-    border-color: #4d4d4d;
+    border-color: #b3b3b3;
 }
 .reg_progress_dots span:before{
-    background-color: #4d4d4d;
+    background-color: #b3b3b3;
 }
 /*casino navigation*/
 .tl_casino_navigation_wrapper {
-    color: #4d4d4d;
+    color: #b3b3b3;
 }
 
 .tl_casino_navigation_tab {
     background-color: rgba(0,0,0,0.0);
-    color: #4d4d4d;
+    color: #b3b3b3;
     border-radius:4px 4px 0 0;
 
 }
 
 .tl_casino_subnavigation_wrapper{
-    background-color: rgba(255,255,255,0.877);
-    color: #4d4d4d;
+    background-color: rgba(0,92,112,0.877);
+    color: #b3b3b3;
     border-radius:4px;
 }
 
 .tl_casino_navigation_tab.active,
 .tl_casino_navigation_tab:hover {
-    background-color: rgba(255,255,255,0.877);
-    color: #ffb700;
+    background-color: rgba(0,92,112,0.877);
+    color: #F27404;
 }
 
 .tl_casino_subnavigation_item.active,
 .tl_casino_subnavigation_item:hover {
-    color: #ffb700;
+    color: #F27404;
 }
 
 .casino_nav__see_more__dropdown,
 .filter_result__block {
-    background-color: rgba(255,255,255,0.877);
+    background-color: rgba(0,92,112,0.877);
+    color: #fff;
 }
 
 
-.tl_logo{
-    visibility:hidden;
+
+
+/*payments*/
+.tl_payment_block,
+.tl_payment_block_inter,
+.tl_payment_inner_block{
+    background-color:#003642;
+    color:#b3b3b3;
 }
+.tl_payment_block:hover,
+.tl_payment_block_inter:hover,
+.tl_payment_inner_block:hover,
+.tl_payment_block.active,
+.tl_payment_inner_block.active
+.tl_payment_block_inter.active{
+    background-color:#003a47;
+    color:#b3b3b3;
+}
+.deposit_payment,
+.tl_payment_block .icon_color,
+.payment_lbl, a.payment_lbl{
+    color:#b3b3b3;
+}
+.tl_payment_block .tl_deposit_button{
+    background-color:#F27404;
+    color:#fff;
+}
+.tl_payment_block .tl_deposit_button:hover{
+    background-color:#c05c03;
+    color:#fff;
+}
+.tl_input_popup{
+    background-color:#00191e;
+    color:#b3b3b3;
+}
+
+/*inbox popup*/
+.tl_my_inbox_container{
+    background-color:#005C70;
+    color:#b3b3b3;
+}
+.tl_my_inbox_mails_cont{
+    background-color:#003642;
+    color:#b3b3b3;
+}
+.deleteAll_icon, .readAll_icon,
+.tl_mail_icon,
+.tl_mail_details_title{
+    color:#b3b3b3;
+}
+.tl_mail_details{
+    color:#fff;
+}
+.tl_mail_item{
+    background-color:#005C70;
+    color:#b3b3b3;
+}
+.tl_mail_item.active,
+.tl_mail_item:hover{
+    background-color:#00191e;
+    color:#b3b3b3;
+}
+.tl_mail_row{
+    background-color:#005C70;
+    color:#b3b3b3;
+}
+.tl_mail_msgId{
+    color:#F27404;
+}
+.tl_msg_button {
+    background-color: #F27404;
+    color: #fff;
+}
+.tl_msg_button:hover {
+    background-color: #c05c03;
+    color: #fff;
+}
+.close_games_content,
+.add__game,
+.add__game_button,
+.left__menu{
+    background-color:rgba(0,92,112,0.877);
+    color:#fff;
+}
+.last__winners .item__img{
+    background-color:#005C70;
+    color:#fff;
+}
+.star__icon.favoriteGames_delete,
+.tl_typography_accent{
+    color: #F27404;
+}
+
+
+
+
 
   
